fixed-alignments-homepage

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
 
   .dashcontent-group {
       margin-top: 20px;
-      margin-right: 10px;
+      /* margin-right: 10px; */
   }
 
   .frontbtns {
